--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <script src="https://accounts.google.com/gsi/client" async></script>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>WAVrater</title>
   </head>
   <body>
     <div id="root"></div>
